--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                         <circle fill="#F76D57" cx="18" cy="18" r="6" />
                     </g>
                 </svg></a>
+            <div class="photo-site">
+                photo sharing social network
+            </div>
         </div>
         <div class="product2">
             <a href="product2.html"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -144,6 +147,9 @@
                         </g>
                     </g>
                 </svg></a>
+            <div class="photo-site">
+                photo sharing social network
+            </div>
         </div>
         <div class="product3">
             <a href="product2.html"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -195,6 +201,9 @@
                         <path opacity="0.15" fill="#231F20" d="M30,32H18c0-3.313,2.687-6,6-6S30,28.687,30,32z" />
                     </g>
                 </svg></a>
+            <div class="photo-site">
+                photo sharing social network
+            </div>
         </div>
         <div class="product4">
             <a href="product2.html"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -234,6 +243,9 @@
                         <circle fill="#F76D57" cx="32" cy="14" r="3" />
                     </g>
                 </svg></a>
+            <div class="photo-site">
+                photo sharing social network
+            </div>
         </div>
         <div class="product5">
             <a href="product2.html"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -262,6 +274,10 @@
                    c0,0.553-0.447,1-1,1h-6c-0.553,0-1-0.447-1-1v-5H2v18c0,1.104,0.896,2,2,2H60z" />
                     </g>
                 </svg></a>
+
+            <div class="photo-site">
+                photo sharing social network
+            </div>
         </div>
         <div class="product6">
             <a href="product2.html"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -289,6 +305,9 @@
                             d="M6,4v49.537C7.062,52.584,8.461,52,10,52h2V2H8C6.896,2,6,2.896,6,4z" />
                     </g>
                 </svg></a>
+                <div class="photo-site">
+                    photo sharing social network
+                </div>
         </div>
 
     </div>
