--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </nav>
 
     <section class="hero">
-        <!-- <video src="./assets/video/2556513-hd_1920_1080_25fps.mp4" controls autoplay loop></video> -->
+        <video src="./assets/video/FREE Stock Footage - Man Using a Computer.mp4" controls muted autoplay loop></video>
+        <div class="header-text">
         Social media has become an integral part of our lives, shaping the way we communicate, share information, and
         stay connected. It provides a platform for instant interaction with friends, family, and even strangers,
         allowing us to build and maintain relationships regardless of geographical barriers. The benefits of owning a
@@ -31,6 +32,7 @@
         its positives with awareness of potential drawbacks such as privacy concerns and the impact on mental health.
         Social media, when used effectively, can enhance our social interactions and offer opportunities for personal
         growth and networking.
+        </div>
     </section>
     <div>
         <h1>OUR PRODUCTS</h1>
