--- a/index2.html
+++ b/index2.html
@@ -229,20 +229,21 @@
 	<section class="products-wrapper">
 		<div class="products-box" id="products">
 			<div class="products products-1">
+				
 				<div class="products-1-img"><img
-						src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
-						alt="dog toy"></div>
+						src="./assets/images/819wT9kNUgL.jpg"
+						alt="chew toy"></div>
 				<div class="product-text-box-1">
-					<div>dog toy 1</div>
-					<div>69.99 $</div>
+					<div>Squiky Chew Ball</div>
+					<div>6999.99 $</div>
 				</div>
 			</div>
 			<div class="products products-2">				<div class="products-1-img"><img
-				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
+				src="./assets/images/320028747_max.jpg"
 				alt="dog toy"></div>
 		<div class="product-text-box-1">
-			<div>dog toy 1</div>
-			<div>69.99 $</div>
+			<div>Chew Toy for Aggresive Chewers</div>
+			<div>699.99 $</div>
 		</div></div>
 			<div class="products products-3">				<div class="products-1-img"><img
 				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
