--- a/index2.html
+++ b/index2.html
@@ -47,23 +47,12 @@
 							fill="#4F46A3" />
 					</svg>
 				</div>
-				<!-- <div class="banner-name">Pet colosseum</div> -->
-
 			</div>
 			<div class="banner-search-bar banner">
-				<!-- <input type="text" placeholder="Search for your ultimate pet toy!"> -->
 				<div class="banner-name"> Welcome to <b>Pet colosseum!</b> <br> The endgame in pet toys!</div>
 
 			</div>
 			<div class="banner-info">
-				<!-- <div class="banner-phone banner">
-					<p>Login</p><br>
-					<p>+123 456 789</p>
-				</div>
-				<div class="banner-email banner">
-					<p>Email:</p>
-					<p>Exampleemail@domain.com</p>
-				</div> -->
 				<div class="svg-search"><svg width="25px" height="25px" viewBox="0 0 1024 1024" class="icon"
 						style="vertical-align: middle;fill: #000000;overflow: hidden;" version="1.1"
 						xmlns="http://www.w3.org/2000/svg">
@@ -215,7 +204,7 @@
 	</nav>
 	<section class="hero hero-box" id="hero-box">
 		<div class="hero hero-video">
-			<video src="./assets/video/9006740-hd_1920_1080_30fps.mp4"  autoplay loop></video>
+			<video src="./assets/video/9006740-hd_1920_1080_30fps.mp4" autoplay loop ></video>
 		</div>
 
 		<div class="hero hero-text-box">
@@ -225,54 +214,43 @@
 		</div>
 
 	</section>
-	<h2>our products</h2>
+	<div style="display: flex; justify-content: center;">
+		<h2 style="text-align: center; background: rgba(17, 17, 17, 0.2); border-radius: 5px; box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(5.7px); padding-left: 5px; padding-right: 5px;">our products</h2>
+	</div>
 	<section class="products-wrapper">
 		<div class="products-box" id="products">
 			<div class="products products-1">
-				
-				<div class="products-1-img"><img
-						src="./assets/images/819wT9kNUgL.jpg"
-						alt="chew toy"></div>
-				<div class="product-text-box-1">
-					<div>Squiky Chew Ball</div>
-					<div>6999.99 $</div>
-				</div>
+				<a href="./product1.html">
+					<div class="products-1-img"><img src="./assets/images/819wT9kNUgL.jpg" alt="chew toy"></div>
+					<div class="product-text-box-1">
+						<div>Spiky Squeky Chew Ball</div>
+						<div>6999.99 $</div>
+				</a>
+
 			</div>
-			<div class="products products-2">				<div class="products-1-img"><img
-				src="./assets/images/320028747_max.jpg"
-				alt="dog toy"></div>
-		<div class="product-text-box-1">
-			<div>Chew Toy for Aggresive Chewers</div>
-			<div>699.99 $</div>
-		</div></div>
-			<div class="products products-3">				<div class="products-1-img"><img
-				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
-				alt="dog toy"></div>
-		<div class="product-text-box-1">
-			<div>dog toy 1</div>
-			<div>69.99 $</div>
-		</div></div>
-			<div class="products products-4">				<div class="products-1-img"><img
-				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
-				alt="dog toy"></div>
-		<div class="product-text-box-1">
-			<div>dog toy 1</div>
-			<div>69.99 $</div>
-		</div></div>
-			<div class="products products-5">				<div class="products-1-img"><img
-				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
-				alt="dog toy"></div>
-		<div class="product-text-box-1">
-			<div>dog toy 1</div>
-			<div>69.99 $</div>
-		</div></div>
-			<div class="products products-6">				<div class="products-1-img"><img
-				src="https://i5.walmartimages.com/seo/Vibrant-Life-Rope-Dog-Toys-2-Knot-Rope-Dog-Toy_1f3870ae-f62c-46ac-abca-8726a3589f0a.bc71100f2cb2a3fb012f80f833968a4b.jpeg?odnHeight=2000&odnWidth=2000&odnBg=FFFFFF"
-				alt="dog toy"></div>
-		<div class="product-text-box-1">
-			<div>dog toy 1</div>
-			<div>69.99 $</div>
-		</div></div>
+		</div>
+		<div class="products products-2">
+			<a href="./product1.html"></a>
+			<div class="products-1-img"><img src="./assets/images/320028747_max.jpg" alt="dog toy"></div>
+			<div class="product-text-box-1">
+				<div>Chew Toy for Aggressive Chewers</div>
+				<div>699.99 $</div>
+			</a>
+			</div>
+		</div>
+		<div class="products products-3">
+			<a href="./product1.html">
+			<div class="products-1-img"><img
+					src="./assets/images/71KHlJw+8TL._AC_SL1500_.jpg"
+					alt="dog toy"></div>
+			<div class="product-text-box-1">
+				<div>Teeth-Cleaning Veggie Toy</div>
+				<div>69.99 $</div>
+			</a>
+
+			</div>
+		</div>
 		</div>
 	</section>
 	<footer class="footer-wrapper">
