--- a/product1.html
+++ b/product1.html
@@ -197,9 +197,58 @@
         </div>
     </header>
     <main class="main">
-        
+        <div>
+            <h3>Spiky Squeaky Soft Ball</h3>
+        </div>
+        <div class="img1">
+            <img src="./assets/images/81qkaIodT9S._AC_UF894,1000_QL80_.jpg" alt="spiky balls">
+        </div>
+
+        <div class="texttext"> Every dog deserves a toy that not only entertains but also contributes to their
+            well-being. The Spiky
+            Squeaky Dog Toy is designed to provide endless fun and stimulation for your furry friend, reducing boredom
+            and anxiety. Its unique design ensures your dog stays engaged, making playtime both exciting and beneficial
+            for their dental health.
+        </div>
+
+        </div>
+        <div class="specs">
+            <h4>
+                Specifications:
+            </h4>
+            <ul>
+                <li>
+                    Made from durable, non-toxic rubber, ensuring safety and longevity.
+                </li>
+                <li>
+                    8.5 cm in diameter, perfect for small to medium-sized dogs.
+                </li>
+                <li>
+                    Features soft, flexible spikes that gently massage your dog's gums, promoting dental health.
+                </li>
+                <li>
+                    Built-in squeaker that keeps your dog entertained with every bite.
+                </li>
+                <li>
+                    Available in vibrant blue, green, and orange.
+                </li>
+            </ul>
+            <div>
+                <h3>price:</h3>
+                <br>
+                <p>The <b>Spiky Squeaky Soft Ball</b> is priced very fairly, at 69.99$ for a single unit.</p>
+                buying more units at bulk could result in lower price per unit, please contact our Price Negotiation HotLine (tm)
+            </div>
+
+
+
+        </div>
 
     </main>
+    <div class="navbar">
+        <a href="./index2.html">Return Home</a>
+        
+    </div>
 
     <footer class="footer-wrapper">
         <div class="footer footer-socials">
