--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <p class="log-in"><i class="fa-solid fa-right-to-bracket"></i></p>
         </div>
     </header>
-    <div class="empty-container"></div>
+    <div class="hero-container">
+        <h1>Every Pet's Paradise, Delivered To Your Door</h1>
+
+    </div>
     <div class="products" id="products">
         <div class="product product1">
             <div class="product-svg-1">
@@ -63,17 +66,19 @@
                             d="M19.724.689a2.269,2.269,0,0,0-3.207,0l-6.8,6.8a2.268,2.268,0,0,0,3.207,3.207l2.931-2.931V22.678a2.266,2.266,0,1,0,4.531,0V7.761l2.931,2.931a2.268,2.268,0,0,0,3.207-3.207l-6.8-6.8ZM4.531,7.953A1.136,1.136,0,0,1,5.664,6.82H6.23a2.266,2.266,0,1,0,0-4.531H5.664A5.662,5.662,0,0,0,0,7.953V30.608a5.662,5.662,0,0,0,5.664,5.664H30.584a5.662,5.662,0,0,0,5.664-5.664V7.953a5.662,5.662,0,0,0-5.664-5.664h-.566a2.266,2.266,0,1,0,0,4.531h.566a1.136,1.136,0,0,1,1.133,1.133V30.608a1.136,1.136,0,0,1-1.133,1.133H5.664a1.136,1.136,0,0,1-1.133-1.133Z"
                             transform="translate(0 -0.025)" opacity="0.19" />
                     </svg>
-
-                    <svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <input type="checkbox" id="heart">
+                    <label for="heart"><svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 42.324 36.194">
                         <path id="heart-solid-2" data-name="heart-solid"
                             d="M3.935,63.5,18.872,77.444a3.36,3.36,0,0,0,4.58,0L38.389,63.5a12.366,12.366,0,0,0,3.935-9.052v-.479a11.816,11.816,0,0,0-20.17-8.357l-.992.992-.992-.992A11.816,11.816,0,0,0,0,53.968v.479A12.366,12.366,0,0,0,3.935,63.5Z"
-                            transform="translate(0 -42.151)" opacity="0.17" />
-                    </svg>
+                            transform="translate(0 -42.151)" opacity="1" />
+                    </svg></label>
+                    
 
                 </div>
             </div>
-            <a href="./product-page.html">            <img src="./assets/images/Mask Group 1/Mask Group 1.png" alt="">
+            <a href="./product-page.html">            
+                <img src="./assets/images/Mask Group 1/Mask Group 1.png" alt="">
 
             </a>
             <div class="product-text-1">
@@ -108,12 +113,13 @@
                             transform="translate(0 -0.025)" opacity="0.19" />
                     </svg>
 
-                    <svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <input type="checkbox" id="heart2">
+                    <label for="heart2"><svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 42.324 36.194">
                         <path id="heart-solid-2" data-name="heart-solid"
                             d="M3.935,63.5,18.872,77.444a3.36,3.36,0,0,0,4.58,0L38.389,63.5a12.366,12.366,0,0,0,3.935-9.052v-.479a11.816,11.816,0,0,0-20.17-8.357l-.992.992-.992-.992A11.816,11.816,0,0,0,0,53.968v.479A12.366,12.366,0,0,0,3.935,63.5Z"
-                            transform="translate(0 -42.151)" opacity="0.17" />
-                    </svg>
+                            transform="translate(0 -42.151)" opacity="1" />
+                    </svg></label>
 
                 </div>
             </div>
@@ -152,12 +158,13 @@
                             transform="translate(0 -0.025)" opacity="0.19" />
                     </svg>
 
-                    <svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    <input type="checkbox" id="heart3">
+                    <label for="heart3"><svg id="heart-solid" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 42.324 36.194">
                         <path id="heart-solid-2" data-name="heart-solid"
                             d="M3.935,63.5,18.872,77.444a3.36,3.36,0,0,0,4.58,0L38.389,63.5a12.366,12.366,0,0,0,3.935-9.052v-.479a11.816,11.816,0,0,0-20.17-8.357l-.992.992-.992-.992A11.816,11.816,0,0,0,0,53.968v.479A12.366,12.366,0,0,0,3.935,63.5Z"
-                            transform="translate(0 -42.151)" opacity="0.17" />
-                    </svg>
+                            transform="translate(0 -42.151)" opacity="1" />
+                    </svg></label>
 
                 </div>
             </div>
