--- a/product-page-2.html
+++ b/product-page-2.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style-product-2.css" />
+    <link rel="stylesheet" href="style-product.css"/>
+    <link rel="stylesheet" href="style-product-2.css">
 </head>
 
 <body>
     <header class="header-wrapper" id="Home">
         <div class="header-logo">
             <p>
-                <img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" />
+                <a href="./index.html"><img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" /></a>
             </p>
         </div>
 
@@ -31,7 +32,7 @@
         </div>
     </header>
     <div class="products">
-        <a href="./index.html">
+        <a href="./index.html#products">
             <div class="back-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="34.5" height="34.5" viewBox="0 0 67 67">
                     <g id="Group_10" data-name="Group 10" transform="translate(-78 -157)">
@@ -63,13 +64,13 @@
                     <div class="carousel">
                         <div class="buttons">
                             <input id="first" type="radio" name="carousel" checked />
-                            <label for="first"></label>
+                            <label for="first">1</label>
 
                             <input id="second" name="carousel" type="radio" />
-                            <label for="second"></label>
+                            <label for="second">5</label>
 
                             <input id="third" name="carousel" type="radio" />
-                            <label for="third"></label>
+                            <label for="third">10</label>
                         </div>
                     </div>
                 </div>
@@ -85,7 +86,6 @@
                         tooth contact and maximum bounce. Available in packs of 1, 5, or 10, this lightweight 7-ounce
                         toy is perfectly sized for medium to large breeds, with 2.5-inch diameter balls that provide
                         satisfying chewing and fetching action.</p>
-                    <!-- <div class="divider2">--------------</div> -->
                     <div>
                         <div class="divider2"></div>
                     </div>
