--- a/product-page-3.html
+++ b/product-page-3.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style-product.css" />
     <link rel="stylesheet" href="style-product-3.css" />
 </head>
 
@@ -12,7 +13,7 @@
     <header class="header-wrapper" id="Home">
         <div class="header-logo">
             <p>
-                <img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" />
+                <a href="./index.html"><img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" /></a>
             </p>
         </div>
 
@@ -31,7 +32,7 @@
         </div>
     </header>
     <div class="products">
-        <a href="./index.html">
+        <a href="./index.html#products">
             <div class="back-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="34.5" height="34.5" viewBox="0 0 67 67">
                     <g id="Group_10" data-name="Group 10" transform="translate(-78 -157)">
@@ -63,13 +64,13 @@
                     <div class="carousel">
                         <div class="buttons">
                             <input id="first" type="radio" name="carousel" checked />
-                            <label for="first"></label>
+                            <label for="first">1</label>
 
                             <input id="second" name="carousel" type="radio" />
-                            <label for="second"></label>
+                            <label for="second">2</label>
 
                             <input id="third" name="carousel" type="radio" />
-                            <label for="third"></label>
+                            <label for="third">3</label>
                         </div>
                     </div>
                 </div>
