--- a/product-page.html
+++ b/product-page.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style-product.css" />
+    <link rel="stylesheet" href="style-product-1.css">
 </head>
 
 <body>
     <header class="header-wrapper" id="Home">
         <div class="header-logo">
             <p>
-                <img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" />
+                <a href="./index.html"><img class="logo" src="./assets/images/Group 2/Group 2.png" alt="logo" /></a>            
             </p>
         </div>
 
@@ -31,7 +32,7 @@
         </div>
     </header>
     <div class="products">
-        <a href="./index.html">
+        <a href="./index.html#products">
             <div class="back-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="34.5" height="34.5" viewBox="0 0 67 67">
                     <g id="Group_10" data-name="Group 10" transform="translate(-78 -157)">
